syntax = "proto3";

package graft.proto;

option go_package = "github.com/eleven-am/graft/proto/gen";

import "common.proto";

service StorageService {
  rpc ReadFromNode(ReadFromNodeRequest) returns (ReadFromNodeResponse);
  rpc WriteToNode(WriteToNodeRequest) returns (WriteToNodeResponse);
  rpc DeleteFromNode(DeleteFromNodeRequest) returns (DeleteFromNodeResponse);
  rpc BatchOperation(BatchOperationRequest) returns (BatchOperationResponse);
}

message ReadFromNodeRequest {
  string key = 1;
  string consistency_level = 2;
}

message ReadFromNodeResponse {
  Status status = 1;
  bytes value = 2;
  string node_id = 3;
}

message WriteToNodeRequest {
  string key = 1;
  bytes value = 2;
}

message WriteToNodeResponse {
  Status status = 1;
  string node_id = 2;
}

message DeleteFromNodeRequest {
  string key = 1;
}

message DeleteFromNodeResponse {
  Status status = 1;
  string node_id = 2;
}

message BatchOperationRequest {
  repeated StorageOperation operations = 1;
}

message BatchOperationResponse {
  Status status = 1;
  repeated OperationResult results = 2;
  string node_id = 3;
}

message StorageOperation {
  string type = 1;  // "PUT", "DELETE"
  string key = 2;
  bytes value = 3;
}

message OperationResult {
  bool success = 1;
  string error = 2;
  string key = 3;
}